tests/test_data/istio/expected/networking.k8s.io/v1/Ingress/hook.yaml
# Source: jxboot-helmfile-resources/templates/700-hook-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: hook
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: hook
            port: 80
        path: "/hook"
    host: hook-jx.mydomain.com
  tls:
  - hosts:
    - hook-jx.mydomain.com
    secretName: "my-ingress-secret"
