tests/test_data/istio/expected/networking.k8s.io/v1/Ingress/nexus.yaml
# Source: jxboot-helmfile-resources/templates/700-nexus-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: nexus
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: nexus
            port: 80
        path: "/"
    host: nexus-jx.mydomain.com
  tls:
  - hosts:
    - nexus-jx.mydomain.com
    secretName: "my-ingress-secret"
